<resources>
    <string name="app_name">Try It On Your Phone</string>
    <string name="title_code">Code</string>
    <string name="title_history">History</string>
    <string name="title_settings">Settings</string>
    <string name="menu_select_language">Pick Programming Language</string>
    <string name="menu_run_code">Run Code</string>
    <string name="language_search_hint">e.g. Java, Python, C</string>
    <string name="filter">Filter</string>
    <string name="filter_show_practical">Practical Languages</string>
    <string name="filter_show_recreational">Recreational Languages</string>
    <string name="config_show_practical_languages">show_practical_languages</string>
    <string name="show_recreational_languages">show_recreational_languages</string>
    <string name="config_show_recreational_languages">show_recreational_languages</string>
    <string name="menu_hello_world">Show \"Hello, World!\" Program</string>
    <string name="editor_button_indent">Indent</string>
    <string name="editor_button_left_brace">Left Curly Bracket</string>
    <string name="editor_button_right_brace">Right Curly Bracket</string>
    <string name="editor_button_left_angle">Left Angle Bracket</string>
    <string name="editor_button_right_angle">Right Angle Bracket</string>
    <string name="editor_button_semicolon">Semicolon</string>
    <string name="editor_button_undo">Undo</string>
    <string name="editor_button_redo">Redo</string>
    <string name="menu_clear_code">Clear Current Code</string>
</resources>