<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.code.CodeFragment">

    <EditText
        android:id="@+id/code_editor"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@null"
        android:ems="10"
        android:fontFamily="monospace"
        android:gravity="start|top"
        android:inputType="textLongMessage|textMultiLine|textNoSuggestions|textFilter"
        android:overScrollMode="always"
        android:padding="8dp"
        android:scrollbars="vertical"
        android:selectAllOnFocus="false"
        android:singleLine="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@id/editor_indent_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/editor_buttons_divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/code_editor" />

    <Button
        android:id="@+id/editor_undo_button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        app:icon="@drawable/ic_baseline_undo_24"
        style="@style/Widget.App.Button.IconOnly"
        android:contentDescription="@string/editor_button_undo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editor_buttons_divider"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
        android:id="@+id/editor_redo_button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        app:icon="@drawable/ic_baseline_redo_24"
        style="@style/Widget.App.Button.IconOnly"
        android:contentDescription="@string/editor_button_redo"
        app:layout_constraintStart_toEndOf="@id/editor_undo_button"
        app:layout_constraintTop_toBottomOf="@id/editor_buttons_divider"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <View
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintStart_toEndOf="@+id/editor_redo_button"
        app:layout_constraintTop_toBottomOf="@+id/editor_buttons_divider" />

    <Button
        android:id="@+id/editor_dedent_button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        app:icon="@drawable/ic_baseline_arrow_back_24"
        style="@style/Widget.App.Button.IconOnly"
        android:contentDescription="@string/editor_button_indent"
        app:layout_constraintStart_toEndOf="@id/editor_redo_button"
        app:layout_constraintTop_toBottomOf="@id/editor_buttons_divider"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
        android:id="@+id/editor_indent_button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        app:icon="@drawable/ic_baseline_arrow_forward_24"
        style="@style/Widget.App.Button.IconOnly"
        android:contentDescription="@string/editor_button_indent"
        app:layout_constraintStart_toEndOf="@id/editor_dedent_button"
        app:layout_constraintTop_toBottomOf="@id/editor_buttons_divider"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <View
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintStart_toEndOf="@+id/editor_indent_button"
        app:layout_constraintTop_toBottomOf="@+id/editor_buttons_divider" />

    <View
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toStartOf="@+id/editor_left_brace_button"
        app:layout_constraintTop_toBottomOf="@+id/editor_buttons_divider" />

    <Button
        android:id="@+id/editor_left_brace_button"
        style="@style/Widget.App.Button.IconOnly"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:contentDescription="@string/editor_button_left_brace"
        android:fontFamily="monospace"
        android:text="{"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/editor_right_brace_button"
        app:layout_constraintTop_toBottomOf="@id/editor_buttons_divider" />


    <Button
        android:id="@+id/editor_right_brace_button"
        style="@style/Widget.App.Button.IconOnly"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:contentDescription="@string/editor_button_right_brace"
        android:fontFamily="monospace"
        android:text="}"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/editor_semicolon_button"
        app:layout_constraintTop_toBottomOf="@id/editor_buttons_divider" />

    <View
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toStartOf="@+id/editor_semicolon_button"
        app:layout_constraintTop_toTopOf="@+id/editor_buttons_divider" />

    <Button
        android:id="@+id/editor_semicolon_button"
        style="@style/Widget.App.Button.IconOnly"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:contentDescription="@string/editor_button_semicolon"
        android:fontFamily="monospace"
        android:text=";"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editor_buttons_divider" />

</androidx.constraintlayout.widget.ConstraintLayout>