<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_code">

    <fragment
        android:id="@+id/navigation_code"
        android:name="com.github.theunlocked.tryitonyourphone.ui.code.CodeFragment"
        android:label="@string/title_code"
        tools:layout="@layout/fragment_code" >
        <action
            android:id="@+id/action_navigation_code_to_navigation_language_picker"
            app:destination="@id/navigation_language_picker"
            app:enterAnim="@anim/fragment_fade_enter"
            app:exitAnim="@anim/fragment_fade_exit"
            app:popEnterAnim="@anim/fragment_fade_enter"
            app:popExitAnim="@anim/fragment_fade_exit" />
        <action
            android:id="@+id/action_navigation_code_to_navigation_run_result"
            app:destination="@id/navigation_run_result" />
    </fragment>

    <fragment
        android:id="@+id/navigation_history"
        android:name="com.github.theunlocked.tryitonyourphone.ui.history.HistoryFragment"
        android:label="@string/title_history"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.github.theunlocked.tryitonyourphone.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/navigation_language_picker"
        android:name="com.github.theunlocked.tryitonyourphone.ui.code.languagepicker.LanguagePickerFragment"
        tools:layout="@layout/fragment_langauge_picker" >
        <action
            android:id="@+id/action_navigation_language_picker_to_navigation_language_picker_filter_dialog"
            app:destination="@id/navigation_language_picker_filter_dialog"
            app:enterAnim="@anim/fragment_fade_enter"
            app:exitAnim="@anim/fragment_fade_exit"
            app:popEnterAnim="@anim/fragment_fade_enter"
            app:popExitAnim="@anim/fragment_fade_exit" />
    </fragment>

    <dialog
        android:id="@+id/navigation_language_picker_filter_dialog"
        android:name="com.github.theunlocked.tryitonyourphone.ui.code.languagepicker.filters.LanguagePickerFilterListDialogFragment"
        tools:layout="@layout/fragment_language_picker_filter_dialog" />
    <dialog
        android:id="@+id/navigation_run_result"
        android:name="com.github.theunlocked.tryitonyourphone.ui.code.runresult.RunResultFragment"
        tools:layout="@layout/fragment_run_result" />
</navigation>